fixes to the downscaling and code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="file" id="file" accept="image/png, image/jpeg, image/jpg, image/gif">
         <button id="convert">Convert</button>
         <h2>ASCII:</h2>
-        <img id="ascii"></img>
+        <pre id="ascii"></pre>
     </div>
 </body>
 </html>
