--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Convertor</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="scripts.js" defer></script>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <div class="main">
