added some gif parsing functions

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="leftSide">
                 <div class="upload">
                     <h2>Upload Image (.png, .jpeg, .jpg, .gif)</h2>
-                    <input type="file" id="file" accept="image/png, image/jpeg, image/jpg" style="display: none;">
+                    <input type="file" id="file" accept="image/png, image/jpeg, image/jpg image/gif" style="display: none;">
                     <label for="file" id="fileLabel" class="fileLabel">SELECT A FILE</label>
                 </div>
                 <div class="settings">
