gif parsing functions - NOT FUNCTIONAL

--- a/index.html
+++ b/index.html
@@ -99,5 +99,6 @@
         <button id="saveCustomCharacterSet">At least 2 characters are required to save.</button>
     </div>
     <script src="scripts.js" defer></script>
+    <script type="module" src="gifToFrames/index.js"></script>
 </body>
 </html>
